--- a/materials/cs5_practical_multiple-linear-regression.qmd
+++ b/materials/cs5_practical_multiple-linear-regression.qmd
@@ -242,9 +242,7 @@ If I would plot all the other variables against each other, then I would spot th
 Another way of looking at this would be to create a correlation matrix, like we did before in the [correlations chapter](#correlation-coefficients):
 
 ```{python}
-# instead of dropping all the non-numeric columns, we
-# specifically select only numeric columns
-pm2_5_py.select_dtypes(include = "number").corr()
+pm2_5_py.corr(numeric_only = True)
 ```
 
 This confirms what we saw in the plots, there aren't any very strong correlations between the different (numerical) variables, apart from a negative correlation between `pm2_5` and `wind_m_s`, which has a Pearson's r of $r$ = `r pm2_5 %>% select_if(is.numeric) %>% cor_test() %>% filter(cor != 1) %>% arrange(desc(abs(cor))) %>% slice(1) %>% pull(cor)`.
