--- a/materials/cs2_practical_anova.qmd
+++ b/materials/cs2_practical_anova.qmd
@@ -1,7 +1,7 @@
 ---
 title: "ANOVA"
 ---
- 
+
 ```{r}
 #| echo: false
 #| message: false
@@ -104,7 +104,7 @@ import statsmodels.api as sm
 import statsmodels.formula.api as smf
 
 # Custom Python script for diagnostic plots, load from base working directory
-import dgplots
+from dgplots import dgplots
 ```
 
 ### Functions
