--- a/materials/cs3_practical_linear-regression.qmd
+++ b/materials/cs3_practical_linear-regression.qmd
@@ -1,7 +1,7 @@
 ---
 title: "Linear regression"
 ---
- 
+
 ```{r}
 #| echo: false
 #| message: false
@@ -91,7 +91,7 @@ import statsmodels.api as sm
 import statsmodels.formula.api as smf
 
 # Custom Python script for diagnostic plots, load from base working directory
-import dgplots
+from dgplots import dgplots
 ```
 
 ### Functions
