--- a/materials/cs4_practical_linear-regression-grouped-data.qmd
+++ b/materials/cs4_practical_linear-regression-grouped-data.qmd
@@ -1,7 +1,7 @@
 ---
 title: "Linear regression with grouped data"
 ---
- 
+
 ```{r}
 #| echo: false
 #| message: false
@@ -99,7 +99,7 @@ import statsmodels.api as sm
 import statsmodels.formula.api as smf
 
 # Custom Python script for diagnostic plots, load from base working directory
-import dgplots
+from dgplots import dgplots
 ```
 
 ### Functions
