--- a/materials/cs4_practical_two-way-anova.qmd
+++ b/materials/cs4_practical_two-way-anova.qmd
@@ -1,7 +1,7 @@
 ---
 title: "Two-way ANOVA"
 ---
- 
+
 ```{r}
 #| echo: false
 #| message: false
@@ -87,7 +87,7 @@ import statsmodels.api as sm
 import statsmodels.formula.api as smf
 
 # Custom Python script for diagnostic plots, load from base working directory
-import dgplots
+from dgplots import dgplots
 ```
 
 ### Functions
