--- a/materials/cs6_practical_power-analysis.qmd
+++ b/materials/cs6_practical_power-analysis.qmd
@@ -1,7 +1,7 @@
 ---
 title: "Power analysis"
 ---
- 
+
 ```{r}
 #| echo: false
 #| message: false
@@ -85,7 +85,7 @@ import statsmodels.api as sm
 import statsmodels.formula.api as smf
 
 # Custom Python script for diagnostic plots, load from base working directory
-import dgplots
+from dgplots import dgplots
 
 # Custom Python script for power calculations, load from base working directory
 import pwr_f2_test
